feat(categories/subcategories): add CreatedBy include

--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\EmailComponents\EmailComponents.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
